Bug 1800389 Color contrast issues for navigation arrow bar
Fixed color contrast issues

behatnotneeded

--- a/htdocs/theme/ocean/sass/utilities/_bootstrap-variables.scss
+++ b/htdocs/theme/ocean/sass/utilities/_bootstrap-variables.scss
@@ -394,9 +394,9 @@ $navbar-default-border:            lighten($navbar-default-bg, 5%);
 // Navbar links
 $navbar-default-link-color:                #FFF;
 $navbar-default-link-hover-color:          #FFF;
-$navbar-default-link-hover-bg:             lighten($navbar-default-bg, 5%);
+$navbar-default-link-hover-bg:             darken($navbar-default-bg, 2%);
 $navbar-default-link-active-color:         #FFF;
-$navbar-default-link-active-bg:            lighten($navbar-default-bg, 5%);
+$navbar-default-link-active-bg:            darken($navbar-default-bg, 5%);
 $navbar-default-link-disabled-color:       #ccc;
 $navbar-default-link-disabled-bg:          transparent;
 
